--- a/views/controller.hbs
+++ b/views/controller.hbs
@@ -72,11 +72,7 @@
                             </div>
 
                             <!-- Login -->
-                            <form
-                                id="form_relay"
-                                method="POST"
-                                action="/controller/api"
-                            >
+                            <form id="form_relay" method="POST">
                                 <div class="row">
                                     <div class="col s10 l7">
 
@@ -187,11 +183,7 @@
                             </div>
 
                             <!-- Login -->
-                            <form
-                                id="form_pc"
-                                method="POST"
-                                action="/controller/api"
-                            >
+                            <form id="form_pc" method="POST">
                                 <div class="row">
                                     <div class="col s10 l7">
 
