--- a/views/controller.hbs
+++ b/views/controller.hbs
@@ -37,7 +37,7 @@
                 <div class="card horizontal blue-grey darken-4">
                     <!-- Image  -->
                     <div class="card-image hide-on-med-and-down">
-                        <img class="controllerImage" src="./images/relay.jpg" />
+                        <img class="controllerImage" src="./images/Relay.jpg" />
                     </div>
                     <div class="card-stacked">
 
