added event responses

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -51,13 +51,20 @@
                                     <h5
                                         class="orange-text controllerTitle"
                                     >Contact me</h5>
+                                    <h5
+                                        class="light-blue-text controllerInfo hidden"
+                                        id="formResponse_mobile"
+                                    >None</h5>
 
                                 </div>
                             </div>
                             <div class="col s3 offset-s1 hide-on-small-only">
                                 <h5 class="orange-text controllerTitle">
                                     Contact me</h5>
-
+                                <h5
+                                    class="light-blue-text controllerInfo hidden"
+                                    id="formResponse_pc"
+                                >None</h5>
                                 <p
                                     class="grey-text text-lighten-4 hide-on-med-and-down controllerText"
                                 >Feel free to contact me with any questions,
