--- a/views/controller.hbs
+++ b/views/controller.hbs
@@ -52,6 +52,10 @@
                                         class="light-blue-text controllerInfo"
                                         id="relayState_mobile"
                                     >Current State: ???</h5>
+                                    <h5
+                                        class="light-blue-text controllerInfo hidden"
+                                        id="relayResponse_mobile"
+                                    >None</h5>
 
                                 </div>
                             </div>
@@ -65,6 +69,11 @@
                                     class="light-blue-text controllerInfo"
                                     id="relayState_pc"
                                 >Current State: ???</h5>
+                                <h5
+                                    class="light-blue-text controllerInfo hidden"
+                                    id="relayResponse_pc"
+                                >None</h5>
+
                                 <p
                                     class="grey-text text-lighten-4 hide-on-med-and-down controllerText"
                                 >Here you can close a relay at my home.
@@ -163,6 +172,10 @@
                                         class="light-blue-text controllerInfo"
                                         id="pcState_mobile"
                                     >Current State: ???</h5>
+                                    <h5
+                                        class="light-blue-text controllerInfo hidden"
+                                        id="pcResponse_mobile"
+                                    >None</h5>
 
                                 </div>
                             </div>
@@ -174,7 +187,10 @@
                                     class="light-blue-text controllerInfo"
                                     id="pcState_pc"
                                 >Current State: ???</h5>
-
+                                <h5
+                                    class="light-blue-text controllerInfo hidden"
+                                    id="pcResponse_pc"
+                                >None</h5>
                                 <p
                                     class="grey-text text-lighten-4 hide-on-med-and-down controllerText"
                                 >Here you can toggle my PC-State from OFF to ON
