--- a/views/controller.hbs
+++ b/views/controller.hbs
@@ -56,6 +56,11 @@
                                         class="light-blue-text controllerInfo hidden"
                                         id="relayResponse_mobile"
                                     >None</h5>
+                                    <p
+                                        class="grey-text text-lighten-4 controllerText"
+                                    >Register
+                                        <a href="/register">here</a>
+                                    </p>
 
                                 </div>
                             </div>
@@ -78,10 +83,15 @@
                                     class="grey-text text-lighten-4 hide-on-med-and-down controllerText"
                                 >Here you can close a relay at my home.
                                 </p>
+                                <p
+                                    class="grey-text text-lighten-4 controllerText"
+                                >Register
+                                    <a href="/register">here</a>
+                                </p>
                             </div>
 
                             <!-- Login -->
-                            <form id="form_relay" method="POST">
+                            <form id="form_relay" autocomplete="on">
                                 <div class="row">
                                     <div class="col s10 l7">
 
@@ -113,8 +123,8 @@
                                             <input
                                                 id="password_relay"
                                                 name="password_relay"
-                                                type="password"
                                                 class="validate white-text"
+                                                type="password"
                                             />
                                             <label
                                                 for="password_relay"
@@ -176,6 +186,11 @@
                                         class="light-blue-text controllerInfo hidden"
                                         id="pcResponse_mobile"
                                     >None</h5>
+                                    <p
+                                        class="grey-text text-lighten-4 controllerText"
+                                    >Register
+                                        <a href="/register">here</a>
+                                    </p>
 
                                 </div>
                             </div>
@@ -196,10 +211,15 @@
                                 >Here you can toggle my PC-State from OFF to ON
                                     or viceversa.
                                 </p>
+                                <p
+                                    class="grey-text text-lighten-4 controllerText"
+                                >Register
+                                    <a href="/register">here</a>
+                                </p>
                             </div>
 
                             <!-- Login -->
-                            <form id="form_pc" method="POST">
+                            <form id="form_pc" autocomplete="on">
                                 <div class="row">
                                     <div class="col s10 l7">
 
