--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -35,7 +35,8 @@
                             Youtube</a>
                     </p>
                     <p class="twitter">
-                        <a href="https://twitter.com/ManuelLerchner"><span
+                        <a href="https://twitter.com/ManuelLerchner">
+                            <span
                                 class="iconify"
                                 data-icon="akar-icons:twitter-fill"
                                 data-inline="false"
