added github link

--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -43,6 +43,15 @@
                             ></span>
                             Twitter&nbsp</a>
                     </p>
+                    <p class="github">
+                        <a href="https://github.com/ManuelLerchner">
+                            <span
+                                class="iconify"
+                                data-icon="akar-icons:github-fill"
+                                data-inline="false"
+                            ></span>
+                            Github&nbsp&nbsp</a>
+                    </p>
                 </ul>
             </div>
 
