--- a/views/about.hbs
+++ b/views/about.hbs
@@ -24,7 +24,7 @@
 
             <div class="parallax"><img
                     class="blurr"
-                    src="./images/who_am_i.jpg"
+                    src="/images/who_am_i.jpg"
                 /></div>
         </div>
 
@@ -38,7 +38,7 @@
                     <div class="card-image hide-on-med-and-down">
                         <img
                             class="controllerImageBig"
-                            src="./images/portrait.jpg"
+                            src="/images/portrait.jpg"
                         />
                     </div>
 
