--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -25,7 +25,7 @@
 
             <div class="parallax"><img
                     class="blurr"
-                    src="./images/message.jpg"
+                    src="/images/message.jpg"
                 /></div>
         </div>
 
@@ -39,7 +39,7 @@
                     <div class="card-image hide-on-med-and-down">
                         <img
                             class="controllerImageBig"
-                            src="./images/messages.jpg"
+                            src="/images/messages.jpg"
                         />
                     </div>
                     <div class="card-stacked">
