--- a/views/register.hbs
+++ b/views/register.hbs
@@ -22,7 +22,7 @@
             </div>
 
             <div class="parallax">
-                <img class="blurr" src="./images/register.jpg" />
+                <img class="blurr" src="/images/register.jpg" />
             </div>
         </div>
 
@@ -36,7 +36,7 @@
                     <div class="card-image hide-on-med-and-down">
                         <img
                             class="controllerImageBig"
-                            src="./images/registerSmall.jpg"
+                            src="/images/registerSmall.jpg"
                         />
                     </div>
                     <div class="card-stacked">
