--- a/views/controller.hbs
+++ b/views/controller.hbs
@@ -26,7 +26,7 @@
 
             <div class="parallax"><img
                     class="blurr"
-                    src="./images/raspberry.jpg"
+                    src="/images/raspberry.jpg"
                 /></div>
         </div>
 
@@ -37,7 +37,7 @@
                 <div class="card horizontal blue-grey darken-4">
                     <!-- Image  -->
                     <div class="card-image hide-on-med-and-down">
-                        <img class="controllerImage" src="./images/Relay.jpg" />
+                        <img class="controllerImage" src="/images/Relay.jpg" />
                     </div>
                     <div class="card-stacked">
 
@@ -167,7 +167,7 @@
 
                     <!-- Image  -->
                     <div class="card-image hide-on-med-and-down">
-                        <img class="controllerImage" src="./images/PC.jpg" />
+                        <img class="controllerImage" src="/images/PC.jpg" />
                     </div>
                     <div class="card-stacked">
 
