--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -9,7 +9,7 @@
                 <a id="logo-container" href="/" class="brand-logo rainbow">
 
                     <div class="Logo">
-                        <img src="./images/logo.png" />
+                        <img src="/images/logo.png" />
 
                     </div>
 
